Drag and Drop for dialog elements Fix stuck drag and drop

--- a/src/scss/partials/_chatDrop.scss
+++ b/src/scss/partials/_chatDrop.scss
@@ -123,4 +123,8 @@ body.is-dragging {
   .page-chats {
     pointer-events: none;
   }
+
+  #folders-container .chatlist-chat {
+    pointer-events: all;
+  }
 }
